# jobqueue

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIDE.md  Makefile  README.md  docker-compose.yml  go.mod  go.sum  openapi.yaml  render.yaml  run.sh
.github/workflows/: ci.yml  docker.yml
cmd/server/: main.go
example-app/: go.mod  main.go
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: llms.txt  robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css
internal/api/: metrics.go  router.go
internal/config/: config.go  config_test.go
internal/queue/: apikey.go  broker.go  broker_test.go  counters.go  cron.go  cron_promoter.go  cron_test.go  events.go  job.go  retry.go  retry_test.go  user.go  webhook.go  webhook_dispatcher.go  worker_pool.go
internal/store/: apikey_store.go  cron_store.go  job_store.go  postgres.go  queries.go  store_test.go  user_store.go  webhook_store.go
internal/ws/: client.go  hub.go  hub_test.go
migrations/: 001_create_jobs.sql  002_create_dlq.sql  003_add_cancelled_status.sql  004_add_job_result.sql  005_create_webhooks.sql  006_create_cron_schedules.sql  007_create_api_keys.sql  008_scope_jobs_to_api_key.sql  009_job_ttl_cleanup.sql  010_cursor_pagination_index.sql  011_job_tags.sql  012_create_users.sql  013_seed_demo_user.sql  014_password_reset_tokens.sql
sdk/go/: README.md  client.go  go.mod  types.go
sdk/python/: .gitignore  pyproject.toml
sdk/python/jobqueue_client/: __init__.py  _base.py  async_client.py  client.py  exceptions.py
(+69 files in other folders)
